# demo-beam-pipelines

./: .gitignore  Dockerfile  Dockerfile.runner  README.md  pipeline.py  pyproject.toml
