[tool.poetry]
name = "demo-beam-pipelines"
version = "0.1.0"
description = ""
authors = ["kavi"]

[tool.poetry.dependencies]
python = "^3.7"
apache-beam = "^2.38.0"
black = {extras = ["jupyter"], version = "^22.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
